# StelarOrbit

./: .gitignore  CMakeLists.txt  README.md
include/: CelestialBody.h  Planet.h  Satellite.h  SolarSystem.h  Star.h  TextDisplay.h
src/: CelestialBody.cpp  Planet.cpp  Satellite.cpp  SolarSystem.cpp  Star.cpp  TextDisplay.cpp  main.cpp
